[workspace.package]
edition = "2021"
license = "MIT"
authors = ["the Mashin authors <hey@mashin.land>"]
repository = "https://github.com/nutshimit/mashin"

[workspace]
resolver = "2"
members = [
    "core",
    "runtime",
    "cli",
    "sdk",
    "sdk/macro",
    "sdk/primitives",
]

[workspace.dependencies]
anyhow = "1.0.71"
thiserror = "1.0.37"
tokio = { version = "=1.25.0", features = ["full"] }
deno_ast = { version = "=0.26.0", features = ["transpiling"] }
deno_core = "=0.177.0"
deno_web = "=0.126.0"
deno_fetch = "=0.119.0"
deno_console = "=0.95.0"
deno_webidl = "=0.95.0"
deno_url = "=0.95.0"
deno_websocket = "=0.100.0"
deno_doc = "0.62.0"
deno_graph = "0.48.1"
deno_semver = "0.2.2"

dlopen = "0.1.8"
serde = { version = "1.0.162", features = ["derive", "rc"] }
serde_json = "1.0.96"
winapi = "=0.3.9"
libffi = "3.1.0"
async-trait = "0.1.68"
log = "0.4.17"
termcolor = "1.2.0"
atty = "=0.2.14"
once_cell = "1.17.1"
env_logger = "0.10.0"
reqwest = { version = "0.11.17", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "rustls-tls-webpki-roots"], default-features = false }
urn = { version = "0.5.1", features = ["serde"] }
url = "2.3"
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.26"
base64 = "0.21.0"
itertools = "0.10"
sodiumoxide = "0.2.7"
clap = { version = "4.2.5", features = ["derive"] }
dialoguer = "0.10.4"
indicatif = "0.17.3"
console = "0.15.5"
parking_lot = "0.12.1"
chrono = "0.4.24"
lazy-regex = "2.5.0"
tempfile = "3.4.0"

# unix
nix = "=0.24.2"

# mashin
mashin_core = { version = "0.1.6", path = "./core" }
mashin_runtime = { version = "0.1.6", path = "./runtime" }
mashin_sdk = { version = "0.1.11", path = "./sdk" }
mashin_macro = { version = "0.1.10", path = "./sdk/macro" }
mashin_primitives = { version = "0.1.1", path = "./sdk/primitives" }
