[package]
name = "mashin"
version = "0.1.3"
readme = "README.md"
description = "Provides the mashin executable"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mashin_runtime.workspace = true
mashin_sdk.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true

clap = { version = "4.2.1", features = ["derive"] }
env_logger.workspace = true
dialoguer = "0.10.4"
