[package]
name = "mashin"
version = "0.1.5"
readme = "README.md"
description = "Provides the mashin executable"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
once_cell.workspace = true
atty.workspace = true

mashin_runtime.workspace = true
mashin_sdk.workspace = true
mashin_primitives.workspace = true

deno_ast = { workspace = true, features = ["transpiling"] }
deno_fetch.workspace = true
deno_core.workspace = true
deno_doc.workspace = true
deno_graph.workspace = true

env_logger.workspace = true
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true

encoding_rs = "=0.8.31"
ring = "=0.16.20"
rand = "0.8.5"
