[package]
name = "mashin_core"
version = "0.1.2"
readme = "README.md"
description = "The core of mashin, consumed by the runtime engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
mashin_sdk.workspace = true
deno_core.workspace = true
libffi.workspace = true
dlopen.workspace = true
log.workspace = true
termcolor.workspace = true
atty.workspace = true
once_cell.workspace = true

url = "2.3"
syn = "1.0.109"
quote = "1.0"
itertools = "0.10"
sodiumoxide = "0.2.7"
base64 = "0.21.0"
rkv = "0.18.4"
