[package]
name = "mashin_core"
version = "0.1.6"
readme = "README.md"
description = "The core of mashin, consumed by the runtime engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
async-trait.workspace = true
mashin_sdk.workspace = true
libffi.workspace = true
dlopen.workspace = true
log.workspace = true
once_cell.workspace = true
deno_core.workspace = true
console.workspace = true
indicatif.workspace = true
url.workspace = true
syn.workspace = true
quote.workspace = true
base64.workspace = true
itertools.workspace = true
sodiumoxide.workspace = true
reqwest.workspace = true

rkv = "0.18.4"
