[package]
name = "mashin_runtime"
version = "0.1.6"
readme = "README.md"
description = "The mashin runtime engine"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
deno_core.workspace = true
deno_web.workspace = true
deno_fetch.workspace = true
deno_console.workspace = true
deno_webidl.workspace = true
deno_url.workspace = true
deno_websocket.workspace = true

log.workspace = true
dlopen.workspace = true
libffi.workspace = true
serde.workspace = true

anyhow.workspace = true
mashin_core.workspace = true

#dynasmrt = "1.2.3"
serde-value = "0.7"

tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["errhandlingapi", "minwindef", "ntdef", "winbase", "winnt"] }
