[package]
name = "mashin_sdk"
version = "0.1.11"
readme = "README.md"
description = "SDK for writing mashin resources"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
mashin_macro.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
urn.workspace = true
indicatif.workspace = true
parking_lot.workspace = true