[package]
name = "atmosphere-test"
version = "0.1.11"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mashin_sdk.workspace = true
log.workspace = true

url = "2.3"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
mashin_sdk.workspace = true