[package]
name = "mashin_ffi"
version = "0.1.0"
readme = "README.md"
description = "FFI engine for mashin"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "lib.rs"

[dependencies]
dynasmrt = "1.2.3"
serde-value = "0.7"

serde_json.workspace = true
deno_core.workspace = true
dlopen.workspace = true
libffi.workspace = true
serde.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["errhandlingapi", "minwindef", "ntdef", "winbase", "winnt"] }
