[package]
name = "mashin_macro"
version = "0.1.10"
readme = "README.md"
description = "Proc macro for writing mashin resources"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
mashin_primitives.workspace = true

proc-macro2 = "1.0.66"
Inflector = "0.11.4"
